Added processing.js library.

--- a/lecture10/index.html
+++ b/lecture10/index.html
@@ -36,3 +36,7 @@ lecture_num: 10
 	For the purposes of this presentation the population will be assumed to be haploid, as is the case for many pathogens.
 	</div>
 </section>
+
+<section>
+    <canvas data-processing-sources="wrightFisher.pde"></canvas>
+</section>
