Replaced text field with textarea in WF simulation.

--- a/lecture10/wrightFisher.html
+++ b/lecture10/wrightFisher.html
@@ -87,7 +87,7 @@
                     <input type="radio" name="popfunc" value="squarewave">Square wave<br>
                     <input type="radio" name="popfunc" value="sawtooth">Saw tooth<br>
                     <input type="radio" name="popfunc" value="custom">Custom:<br>
-                    <input id="customPopFunc" type="text" value="N-amp + Math.random()*amp" style="width:20em" disabled> <br>
+                    <textarea id="customPopFunc" cols="30" rows="2" disabled>N-amp + Math.random()*amp</textarea>
 				</div>
 			</div>
 			<div id="canvas-container" style="margin:0 auto; overflow:hidden; height:100%; text-align:center;">
