--- a/lecture10/wrightFisher.html
+++ b/lecture10/wrightFisher.html
@@ -6,9 +6,9 @@
 	
 	<body style="margin:0">	
 		<div id="container">		
-			<div id="input-container" style="width:400px; text-align:center; margin: 12pt 12pt 12pt 12pt; float:left;">
+			<div id="input-container" style="max-width:67%; text-align:center; float:left; margin-left: 0.5em;">
 				
-				<div style="background-color: black; text-align:center; margin-top:12pt; ">	
+				<div style="background-color: black; text-align:center; margin-top: 0.5em;">	
 				<b style="color:white;">Controls</b>
 				</div>
 				<div style="background-color: #ccccff;  text-align:center;">	
@@ -18,18 +18,19 @@
 					<button onclick="nextGeneration()">next generation</button>
 					<button onclick="run()">run</button>
 					<button onclick="stop()">stop</button>
+					<br>
 					<button onclick="clearCoalescentDensity();drawWrightFisher();">clear density</button>
 				</div>
 
 
-				<div style="background-color: black; text-align:center; margin-top:12pt;">	
+				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
 				<b style="color:white;">Visualisation</b>
 				</div>
 				<div style="background-color: #ccccff;  text-align:center;">	
 
 					<div class="form-element">
-						<label for="animationFPS">Animation speed (fps)</label>
-						<input name="animationFPS" id="animationFPS" type="number" min="1" max="50" value="15"/>
+						<label for="animationSpeed">Animation speed (gen/sec)</label>
+						<input name="animationSpeed" id="animationSpeed" type="number" min="1" max="50" value="15"/>
 					</div>
 					<div class="form-element">
 						<label>mark individuals</label>
@@ -44,9 +45,9 @@
 						<input type='checkbox' checked="true" onclick='setPlotCoalescenceDensity(this);'>
 					</div>
 				</div>
-			
-				<div style="background-color: black; text-align:center; margin-top:12pt;">	
-				<b style="color:white;">Population and sample parameters</b>
+
+				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
+				<b style="color:white;">Simulation parameters</b>
 				</div>
 				<div style="background-color: #ccccff;  text-align:center;">	
 					<div class="form-element">
@@ -55,13 +56,20 @@
 					</div>
 			
 					<div class="form-element">
-						<label for="N">population size (N) = </label>
-						<input name="N" id="N" type="number" min="2" max="99" value="32"/>
-					</div>
-			
-					<div class="form-element">
 						<label for="G">number of generations (G) = </label>
 						<input name="G" id="G" type="number" min="2" max="99" value="64"/>
+					</div>
+
+				</div>
+				
+				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
+				<b style="color:white;">Population size function parameters</b>
+				</div>
+				<div style="background-color: #ccccff;  text-align:center;">	
+			
+					<div class="form-element">
+						<label for="N">population size (N) = </label>
+						<input name="N" id="N" type="number" min="2" max="99" value="32"/>
 					</div>
 			
 					<div class="form-element">
