--- a/lecture10/wrightFisher.html
+++ b/lecture10/wrightFisher.html
@@ -3,6 +3,43 @@
 		<title>Coalescence in the Wright-Fisher population model</title>
 		<link rel="stylesheet" type="text/css" href="wrightFisher.css">
 	</head>
+
+<style>
+.form-element {
+    width: 100%;
+}
+.form-element > .label {
+    display:inline-block;
+    vertical-align: middle;
+    font-size: 0.9em;
+    width:60%;
+    text-align:right;
+}
+.form-element > .input {
+    display:inline-block;
+    vertical-align:middle;
+    width: 39%;
+    text-align:left;
+}
+
+.form-element.pf {
+    margin-top:0.5em;
+}
+
+.form-element > .label.pf {
+    vertical-align: top;
+    width:30%;
+}
+
+.form-element > .input.pf {
+    font-size: 0.9em;
+    width:69%;
+}
+
+.input.pf > textarea {
+    width:95%;
+}
+</style>
 	
 	<body style="margin:0">	
 		<div id="container">		
@@ -29,20 +66,20 @@
 				<div style="background-color: #ccccff;  text-align:center;">	
 
 					<div class="form-element">
-						<label for="animationSpeed">Animation speed (gen/sec)</label>
-						<input name="animationSpeed" id="animationSpeed" type="number" min="1" max="50" value="15"/>
+						<div class="label">Animation speed (gen/sec)</div>
+                        <div class="input"><input name="animationSpeed" id="animationSpeed" type="number" min="1" max="50" value="15"/></div>
 					</div>
 					<div class="form-element">
-						<label>mark individuals</label>
-						<input type='checkbox' checked="true" onclick='setPlotVertices(this);'>
+                        <div class="label">mark individuals</div>
+                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotVertices(this);'></div>
 					</div>
 					<div class="form-element">
-						<label>mark coalescent events</label>
-						<input type='checkbox' checked="true" onclick='setPlotCoalescence(this);'>
+						<div class="label">mark coalescent events</div>
+                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotCoalescence(this);'></div>
 					</div>
 					<div class="form-element">
-						<label>show coalescent density</label>
-						<input type='checkbox' checked="true" onclick='setPlotCoalescenceDensity(this);'>
+						<div class="label">show coalescent density</div>
+                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotCoalescenceDensity(this);'></div>
 					</div>
 				</div>
 
@@ -51,13 +88,13 @@
 				</div>
 				<div style="background-color: #ccccff;  text-align:center;">	
 					<div class="form-element">
-						<label for="sampleSize">sample size (n) = </label>
-						<input name="sampleSize" id="sampleSize" type="number" min="2" max="10" value="2"/>
+						<div class="label" for="sampleSize">sample size (n) = </div>
+                        <div class="input"><input name="sampleSize" id="sampleSize" type="number" min="2" max="10" value="2"/></div>
 					</div>
 			
 					<div class="form-element">
-						<label for="G">number of generations (G) = </label>
-						<input name="G" id="G" type="number" min="2" max="99" value="64"/>
+						<div class="label" for="G">number of generations (G) = </div>
+                        <div class="input"><input name="G" id="G" type="number" min="2" max="99" value="64"/></div>
 					</div>
 
 				</div>
@@ -68,26 +105,30 @@
 				<div style="background-color: #ccccff;  text-align:center;">	
 			
 					<div class="form-element">
-						<label for="N">population size (N) = </label>
-						<input name="N" id="N" type="number" min="2" max="99" value="32"/>
+						<div class="label" for="N">population size (N) = </div>
+                        <div class="input"><input name="N" id="N" type="number" min="2" max="99" value="32"/></div>
 					</div>
 			
 					<div class="form-element">
-						<label for="wavelength">Time between bottlenecks (wavelength) = </label>
-						<input name="wavelength" id="wavelength" type="number" min="2" max="99" value="16"/>
+						<div class="label" for="wavelength">Time between bottlenecks (wavelength) = </div>
+                        <div class="input"><input name="wavelength" id="wavelength" type="number" min="2" max="99" value="16"/></div>
 					</div>
 
 					<div class="form-element">
-						<label for="N_bottleneck">Bottleneck population size (N_bottleneck) = </label>
-						<input name="N_bottleneck" id="N_bottleneck" type="number" min="1" max="99" value="8"/>
+						<div class="label" for="N_bottleneck">Bottleneck population size (N_bottleneck) = </div>
+                        <div class="input"><input name="N_bottleneck" id="N_bottleneck" type="number" min="1" max="99" value="8"/></div>
 					</div>
 
-                    Population fluctuation:<br>
-                    <input type="radio" name="popfunc" value="sinusoid" checked>Sinusoidal<br>
-                    <input type="radio" name="popfunc" value="squarewave">Square wave<br>
-                    <input type="radio" name="popfunc" value="sawtooth">Saw tooth<br>
-                    <input type="radio" name="popfunc" value="custom">Custom:<br>
-                    <textarea id="customPopFunc" cols="30" rows="2" disabled>N-amp + Math.random()*amp</textarea>
+                    <div class="form-element pf">
+                        <div class="label pf"> Population function: </div>
+                        <div class="input pf">
+                            <input type="radio" name="popfunc" value="sinusoid" checked>Sinusoidal<br>
+                            <input type="radio" name="popfunc" value="squarewave">Square wave<br>
+                            <input type="radio" name="popfunc" value="sawtooth">Saw tooth<br>
+                            <input type="radio" name="popfunc" value="custom">Custom:<br>
+                            <textarea id="customPopFunc" rows="2" disabled>N-amp + Math.random()*amp</textarea>
+                        </div>
+                    </div>
 				</div>
 			</div>
 			<div id="canvas-container" style="margin:0 auto; overflow:hidden; height:100%; text-align:center;">
