--- a/lecture10/wrightFisher.html
+++ b/lecture10/wrightFisher.html
@@ -5,9 +5,32 @@
 	</head>
 
 <style>
+
+.input-container {
+    max-width:67%;
+    float:left;
+    margin-left: 0.5em;
+}
+
+.container-title {
+    background-color: black;
+    text-align:center;
+    margin-top: 0.5em;
+    color: white;
+    font-weight: bold;
+}
+
+.container-contents {
+    background-color: #ccccff;
+    width:100%;
+    text-align:left;
+        overflow: hidden;
+}
+
 .form-element {
     width: 100%;
 }
+
 .form-element > .label {
     display:inline-block;
     vertical-align: middle;
@@ -43,85 +66,75 @@
 	
 	<body style="margin:0">	
 		<div id="container">		
-			<div id="input-container" style="max-width:67%; text-align:center; float:left; margin-left: 0.5em;">
+			<div class="input-container" id="input-container">
 				
-				<div style="background-color: black; text-align:center; margin-top: 0.5em;">	
-				<b style="color:white;">Controls</b>
-				</div>
+                <div class="container-title"> Controls </div>
 				<div style="background-color: #ccccff;  text-align:center;">	
 
 					<button onclick="advance(1)">advance</button>
 					<button onclick="advance(1000)">advance 1000</button>
-					<button onclick="nextGeneration()">next generation</button>
+                    <button onclick="nextGeneration()">next generation</button><br>
 					<button onclick="run()">run</button>
 					<button onclick="stop()">stop</button>
-					<br>
 					<button onclick="clearCoalescentDensity();drawWrightFisher();">clear density</button>
 				</div>
 
 
-				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
-				<b style="color:white;">Visualisation</b>
-				</div>
-				<div style="background-color: #ccccff;  text-align:center;">	
+                <div class="container-title">Visualisation</div>
+				<div class="container-contents">	
 
 					<div class="form-element">
-						<div class="label">Animation speed (gen/sec)</div>
-                        <div class="input"><input name="animationSpeed" id="animationSpeed" type="number" min="1" max="50" value="15"/></div>
+						<div class="label">Animation speed (gen/sec)</div><div class="input">
+                            <input name="animationSpeed" id="animationSpeed" type="number" min="1" max="50" value="15"/></div>
 					</div>
 					<div class="form-element">
-                        <div class="label">mark individuals</div>
-                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotVertices(this);'></div>
+                        <div class="label">mark individuals</div><div class="input">
+                            <input type='checkbox' checked="true" onclick='setPlotVertices(this);'></div>
 					</div>
 					<div class="form-element">
-						<div class="label">mark coalescent events</div>
-                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotCoalescence(this);'></div>
+						<div class="label">mark coalescent events</div><div class="input">
+                            <input type='checkbox' checked="true" onclick='setPlotCoalescence(this);'></div>
 					</div>
 					<div class="form-element">
-						<div class="label">show coalescent density</div>
-                        <div class="input"><input type='checkbox' checked="true" onclick='setPlotCoalescenceDensity(this);'></div>
+						<div class="label">show coalescent density</div><div class="input">
+                            <input type='checkbox' checked="true" onclick='setPlotCoalescenceDensity(this);'></div>
 					</div>
 				</div>
 
-				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
-				<b style="color:white;">Simulation parameters</b>
-				</div>
-				<div style="background-color: #ccccff;  text-align:center;">	
+                <div class="container-title">Simulation parameters</div>
+				<div class="container-contents">	
 					<div class="form-element">
-						<div class="label" for="sampleSize">sample size (n) = </div>
-                        <div class="input"><input name="sampleSize" id="sampleSize" type="number" min="2" max="10" value="2"/></div>
+						<div class="label" for="sampleSize">sample size (n) = </div><div class="input">
+                            <input name="sampleSize" id="sampleSize" type="number" min="2" max="10" value="2"/></div>
 					</div>
 			
 					<div class="form-element">
-						<div class="label" for="G">number of generations (G) = </div>
-                        <div class="input"><input name="G" id="G" type="number" min="2" max="99" value="64"/></div>
+						<div class="label" for="G">number of generations (G) = </div><div class="input">
+                            <input name="G" id="G" type="number" min="2" max="99" value="64"/></div>
 					</div>
 
 				</div>
 				
-				<div style="background-color: black; text-align:center; margin-top:0.5em;">	
-				<b style="color:white;">Population size function parameters</b>
-				</div>
-				<div style="background-color: #ccccff;  text-align:center;">	
+                <div class="container-title">Population size function parameters </div>
+				<div class="container-contents">	
 			
 					<div class="form-element">
-						<div class="label" for="N">population size (N) = </div>
-                        <div class="input"><input name="N" id="N" type="number" min="2" max="99" value="32"/></div>
+						<div class="label" for="N">population size (N) = </div><div class="input">
+                            <input name="N" id="N" type="number" min="2" max="99" value="32"/></div>
 					</div>
 			
 					<div class="form-element">
-						<div class="label" for="wavelength">Time between bottlenecks (wavelength) = </div>
-                        <div class="input"><input name="wavelength" id="wavelength" type="number" min="2" max="99" value="16"/></div>
+						<div class="label" for="wavelength">Time between bottlenecks (wavelength) = </div><div class="input">
+                            <input name="wavelength" id="wavelength" type="number" min="2" max="99" value="16"/></div>
 					</div>
 
 					<div class="form-element">
-						<div class="label" for="N_bottleneck">Bottleneck population size (N_bottleneck) = </div>
-                        <div class="input"><input name="N_bottleneck" id="N_bottleneck" type="number" min="1" max="99" value="8"/></div>
+						<div class="label" for="N_bottleneck">Bottleneck population size (N_bottleneck) = </div><div class="input">
+                            <input name="N_bottleneck" id="N_bottleneck" type="number" min="1" max="99" value="8"/></div>
 					</div>
 
                     <div class="form-element pf">
-                        <div class="label pf"> Population function: </div>
-                        <div class="input pf">
+                        <div class="label pf"> Population function: </div><div class="input pf">
                             <input type="radio" name="popfunc" value="sinusoid" checked>Sinusoidal<br>
                             <input type="radio" name="popfunc" value="squarewave">Square wave<br>
                             <input type="radio" name="popfunc" value="sawtooth">Saw tooth<br>
